# MonteCarloModeling

./: .gitignore  CMakeLists.txt  README.md  array.cu  array.cuh  cell.cpp  cell.cu  cell.cuh  cell.h  config_data.cfg  d3.cuh  grid.cpp  grid.cu  grid.cuh  grid.h  init.cf  main.cpp  main.cu  parse_config.cpp  parse_config.cu  parse_config.cuh  parse_config.h  particle.cpp  particle.cu  particle.cuh  particle.h  patch_config.cfg  plot.py  scale_sys.py  time_measurement.cuh  time_measurement.h  utils.cpp  utils.cu  utils.cuh  utils.h
include/: array.cuh  d3.cuh  grid.cuh  parse_config.cuh  particle.cuh  patch.cuh  quat.cuh  rot_methods.cuh  utils.cuh
src/: array.cu  grid.cu  main.cu  parse_config.cu  particle.cu  patch.cu  quat.cu  rot_methods.cu  utils.cu
